License added. Notes and news added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
 	<font color="gold"><div align="left" style="font-size:50%">Throughout its development, Harmonious Platform has proven stable and 
 	robust against system failure.</div></font><br>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><b><u>News</u></b></div></font>
+	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>September 30, 2021</b><br>
+	<br>
+	Pitrix v2.4.2 has been released. All global allocations are now active.</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>September 10, 2021</b><br>
@@ -100,7 +106,15 @@
 	After a long period of heavy development on Pitrix, real progress has finally been made. We are currently in the final stages of
 	testing and debugging in preparation for shipping later in the month. Assuming no serious issues are determined, Pitrix should ship as
 	scheduled on September 30. Until this time, all Pitrix global allocations will remain inactive.</em>
-	</p><br>
+	</p>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">
+		<p><a href="http://www.harmoniousplatformsystems.website">Public website</a> is licensed under Creative Commons 
+		<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Attribution-NonCommercial-NoDerivatives 4.0 International</a></p>
+	</div></font>
+		<!-- continue to image -->
+	<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img src="images/by-nc-nd.png" alt="cc-license-image" width="140"></a><br>
+	
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
