--- a/status.html
+++ b/status.html
@@ -76,146 +76,146 @@
 			<th>viADDR</th>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>2</td>
 			<td>Amsterdam, Netherlands</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#1:2:0012:51</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Brisbane, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>3</td>
 			<td>Cape Town, South Africa</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#3:3:0033:53</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Labrador, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Maroochydore, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Melbourne, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>2</td>
 			<td>Moscow, Russia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#8:2:0082:58</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>2</td>
 			<td>Mumbai, India</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:0092:59</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>3</td>
 			<td>Panama City, Panama</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:1913:61</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>2</td>
 			<td>Reykjavik, Iceland</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:2922:62</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Salt Lake City, United States of America</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>3</td>
 			<td>Santiago, Chile</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:4943:64</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Stockholm, Sweden</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Sydney, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>2</td>
 			<td>Warwick, Australia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:2:7972:67</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Washington D.C., United States of America</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:9991:69</td>
 		</tr>
 		<tr>
-			<td>&#128308;</td>
+			<td>&#128994</td>
 			<td>1</td>
 			<td>Zurich, Switzerland</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
 		</tr>
