New menu structure, site updated v2.4.2

--- a/hardware.html
+++ b/hardware.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.4.1 \./ -->
+	<!-- Site version 2.4.2 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Hardware</title>
@@ -14,6 +14,29 @@
 
 .main {
   font-size: 24px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  padding: 10px;
+  height: 540px;
+}
+
+.left, .right {
+  width: 25%;
+}
+
+.middle {
+  width: 50%;
+}
+
+.row:after {
+  display: table;
+  clear: both;
 }
 </style>
 </head>
@@ -32,9 +55,49 @@
 		<!-- nav menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
 	Our network: 
-	<a href="http://www.harmoniousplatformsystems.website">HARMONIOUS PLATFORM SYSTEMS</a> | 
-	<a href="http://www.gcmediapublishingmanagement.website">GC MEDIA PUBLISHING MANAGEMENT</a>
+		<!-- item entry -->
+		<!-- item desc:mp portfolio management -->
+	<a href="" style="color:blue; text-decoration:none";>MP PORTFOLIO MANAGEMENT</a><br>
+		<!--%--><!-- ok prepare yourselves, this code is going to be very ugly, 
+			but it works -->
+		<!--%--><!-- structure of this menu is extremely sensitive, be careful 
+			with all modifications -->
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+		<!-- item entry -->
+		<!-- item desc:harmonious platform systems -->
+	|___ <a href="http://www.harmoniousplatformsystems.website" style="color:blue; 
+		text-decoration:none";>HARMONIOUS PLATFORM SYSTEMS</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
+		<!-- item entry -->
+		<!-- item desc:gc media publishing management -->
+	|___ <a href="http://www.gcmediapublishingmanagement.website" style="color:blue; 
+		text-decoration:none";>GC MEDIA PUBLISHING MANAGEMENT</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;|&nbsp;&nbsp;&nbsp;
+		<!-- item sub entry -->
+		<!-- item desc:freedom publishers union %primary -->
+	|___ <a href="http://www.freedompublishersunion.net" style="color:blue; 
+		text-decoration:none";>FREEDOM PUBLISHERS UNION (Primary IPv4+IPv6)</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 
+		<!-- item sub entry -->
+		<!-- item desc:freedom publishers union %mirror -->
+	|___ <a href="http://www.freedompublishersunion.online" style="color:blue; 
+		text-decoration:none";>FREEDOM PUBLISHERS UNION (Mirror IPv4 only)</a><br>
+&nbsp;&nbsp; 
+		<!-- item sub entry -->
+		<!-- item desc:ping-go -->
+	|___ <a href="http://www.ping-go.online" style="color:blue; 
+		text-decoration:none";>PING-GO</a>
 	</strong></div></font>
+		<!-- thank you for the crazy ride -->
+
 	<hr style="border: 1px solid gold;" />
 <!-- / -->
 
@@ -52,9 +115,67 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
-	<p><strong>Hardware</strong></p>
+	<p><strong>Hardware</strong></p> 
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Coming soon.</div></font>
+		<!-- tri-set #1 -->
+<div class="row">
+	<div class="column left" style="background-color:black;">
+		<p><center><font size="3"><b>LinkNet Mainframe</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">Intel CPU</font></center></p>
+		<p><center><font size="1">16-32GB RAM</font></center></p>
+		<p><center><font size="1">Local+network storage</font></center></p>
+		<center><img src="images/mainframe-sample.png" width="240"></center>
+	</div>
+
+	<div class="column middle" style="background-color:black;">
+		<p><center><font size="3"><b>LinkNet Gateway</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">AMD CPU</font></center></p>
+		<p><center><font size="1">8GB RAM</font></center></p>
+		<p><center><font size="1">Gigabit networking</font></center></p>
+		<center><img src="images/gateway-sample.png" width="240"></center>
+	</div>
+
+	<div class="column right" style="background-color:black;">
+		<p><center><font size="3"><b>LinkNet Terminal</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">Intel/AMD CPU</font></center></p>
+		<p><center><font size="1">8GB RAM</font></center></p>
+		<p><center><font size="1">Gigabit networking</font></center></p>
+		<center><img src="images/terminal-sample.png" width="240"></center>
+	</div>
+</div>
+
+		<!-- tri-set #2 -->
+<div class="row">
+	<div class="column left" style="background-color:black;">
+		<p><center><font size="3"><b>PowerStation</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">Intel Xeon CPU</font></center></p>
+		<p><center><font size="1">32GB RAM</font></center></p>
+		<p><center><font size="1">512GB SSD storage</font></center></p>
+		<center><img src="images/powerstation-sample.png" width="240"></center>
+	</div>
+
+	<div class="column middle" style="background-color:black;">
+		<p><center><font size="3"><b>WorkStation</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">Intel CPU</font></center></p>
+		<p><center><font size="1">32GB RAM</font></center></p>
+		<p><center><font size="1">512GB SSD storage</font></center></p>
+		<center><img src="images/workstation-sample.png" width="240"></center>
+	</div>
+
+	<div class="column right" style="background-color:black;">
+		<p><center><font size="3"><b>Laptop</b></font></center></p>
+		<p><center><font size="2">Specs</font></center></p>
+		<p><center><font size="1">Intel CPU</font></center></p>
+		<p><center><font size="1">16GB RAM</font></center></p>
+		<p><center><font size="1">1TB SSD storage</font></center></p>
+		<center><img src="images/laptop-sample.png" width="240"></center>
+	</div>
+</div><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
@@ -62,7 +183,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.4.1</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.2</b></div><br>
     </font>
 </div> 
 
