--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.4.1 \./ -->
+	<!-- Site version 2.4.2 \./ -->
 
 <head>
 <title>Harmonious Platform Systems - Pricing</title>
@@ -32,9 +32,49 @@
 		<!-- nav menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
 	Our network: 
-	<a href="http://www.harmoniousplatformsystems.website">HARMONIOUS PLATFORM SYSTEMS</a> | 
-	<a href="http://www.gcmediapublishingmanagement.website">GC MEDIA PUBLISHING MANAGEMENT</a>
+		<!-- item entry -->
+		<!-- item desc:mp portfolio management -->
+	<a href="" style="color:blue; text-decoration:none";>MP PORTFOLIO MANAGEMENT</a><br>
+		<!--%--><!-- ok prepare yourselves, this code is going to be very ugly, 
+			but it works -->
+		<!--%--><!-- structure of this menu is extremely sensitive, be careful 
+			with all modifications -->
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+		<!-- item entry -->
+		<!-- item desc:harmonious platform systems -->
+	|___ <a href="http://www.harmoniousplatformsystems.website" style="color:blue; 
+		text-decoration:none";>HARMONIOUS PLATFORM SYSTEMS</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
+		<!-- item entry -->
+		<!-- item desc:gc media publishing management -->
+	|___ <a href="http://www.gcmediapublishingmanagement.website" style="color:blue; 
+		text-decoration:none";>GC MEDIA PUBLISHING MANAGEMENT</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;|&nbsp;&nbsp;&nbsp;
+		<!-- item sub entry -->
+		<!-- item desc:freedom publishers union %primary -->
+	|___ <a href="http://www.freedompublishersunion.net" style="color:blue; 
+		text-decoration:none";>FREEDOM PUBLISHERS UNION (Primary IPv4+IPv6)</a><br>
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 
+		<!-- item sub entry -->
+		<!-- item desc:freedom publishers union %mirror -->
+	|___ <a href="http://www.freedompublishersunion.online" style="color:blue; 
+		text-decoration:none";>FREEDOM PUBLISHERS UNION (Mirror IPv4 only)</a><br>
+&nbsp;&nbsp; 
+		<!-- item sub entry -->
+		<!-- item desc:ping-go -->
+	|___ <a href="http://www.ping-go.online" style="color:blue; 
+		text-decoration:none";>PING-GO</a>
 	</strong></div></font>
+		<!-- thank you for the crazy ride -->
+
 	<hr style="border: 1px solid gold;" />
 <!-- / -->
 
@@ -62,7 +102,7 @@
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.4.1</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.2</b></div><br>
     </font>
 </div> 
 
