--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@
 	robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>October 19, 2021 #2</b><br>
+	<br>
+	We are aware that the network navigation section of the website has problems rendering as intended on some web browsers. We are 
+	looking into a better way to design this component and it will be corrected in the near future. This is a low priority.</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>October 19, 2021 #1</b><br>
+	<br>
+	We are currently testing two important components - Soul and KEEP UP! Both of these components are scheduled to ship on November 15, 
+	2021.</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>September 30, 2021</b><br>
