Site index updated

--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
 	robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>November 17, 2021</b><br>
+	<br>
+	We are continuing our testing of Soul v1.0.1 Beta. Release date has been delayed. It is now scheduled to ship on December 13, 2021.
+	<br>
+	We are continuing testing of KEEP UP!. Release date has been delayed. It is now scheduled to ship on December 13, 2021.</em>
+	</p>
+
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>October 19, 2021 #2</b><br>
 	<br>
