--- a/index.html
+++ b/index.html
@@ -176,7 +176,30 @@
 	</div></font>
 		<!-- continue to image -->
 	<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img src="images/by-nc-nd.png" alt="cc-license-image" width="140"></a><br>
-	
+	<br>
+	<font color="gold"><div align="center" style="font-size:50%">
+			<p><b>Supporting technologies that make our hybrid networks possible:</b></p>
+	</div></font>
+		<!-- post images -->
+	<center>
+	<img src="images/apache-logo.png" alt="apache-logo" width="64" height="64"> 
+	<img src="images/lamp-logo.png" alt="lamp-logo" width="64" height="64"> 
+	<img src="images/php-logo.png" alt="php-logo" width="64" height="64"> 
+	<img src="images/python-logo.png" alt="python-logo" width="64" height="64"> 
+	<img src="images/perl-logo.png" alt="perl-logo" width="64" height="64"> 
+	<img src="images/gnu-logo.png" alt="gnu-logo" width="64" height="64"> 
+	<img src="images/linux-logo.png" alt="linux-logo" width="64" height="64"> 
+	<img src="images/tumbleweed-logo.png" alt="tumbleweed-logo" width="64" height="64"> 
+	<img src="images/ubuntu-logo.png" alt="ubuntu-logo" width="64" height="64"> 
+	<img src="images/ibm-logo.png" alt="ibm-logo" width="64" height="64"> 
+	<img src="images/redhat-logo.png" alt="redhat-logo" width="64" height="64"> 
+	<img src="images/fedora-logo.png" alt="fedora-logo" width="64" height="64"> 
+	<img src="images/win32-logo.png" alt="win32-logo" width="64" height="64"> 
+	<img src="images/bsd-logo.png" alt="bsd-logo" width="64" height="64"> 
+	<img src="images/netbsd-logo.png" alt="netbsd-logo" width="64" height="64"> 
+	<img src="images/openbsd-logo.png" alt="openbsd-logo" width="64" height="64">
+	</center>
+	<br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
