Update check only

--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>December 1, 2021</b><br>
+	<br>
+	Harmonious Platform Systems now officially supports:<br>
+	- Tumbleweed<br>
+	- Ubuntu 21.04<br>
+	- Fedora Linux 35<br>
+	- Windows 11<br>
+	</ul></em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>November 17, 2021</b><br>
 	<br>
 	We are continuing our testing of Soul v1.0.1 Beta. Release date has been delayed. It is now scheduled to ship on December 13, 2021.
