--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>December 13, 2021</b><br>
+	<br>
+	Soul v1.0.1 has been released.
+	<br>
+	KEEP UP! v0.1 has been released.</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>December 1, 2021</b><br>
 	<br>
 	Harmonious Platform Systems now officially supports:<br>
