Updated front page, adding CMDC link. Added CMDC page to site.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
 	<a href="about.html">ABOUT</a> | 
 	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
-	<hr style="border: 1px solid gold;" /><br>
+	<hr style="border: 1px solid gold;" />
+
+		<!-- sub-menu, only to be used on index page -->
+	<font color="gold"><div align="right" style="font-size:50%"><strong>MORE</strong></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></div></font><br>
+
 
 			<!-- logo image is to be used as part of the title text \./ -->
 	<img src="https://i.imgur.com/PkMpBXR.png" alt="logo-image" width="80" height="80"><strong>armonious Platform Systems</strong>
@@ -99,7 +105,8 @@
 <br>
 	<font color="gold"><div style="font-size:50%"><i>Free From <b>Mass-surveillance</b> ... </i></div></font>
 	<font color="gold"><div style="font-size:50%"><i>Free From <b>Government Censorship</b> ... </i></div></font>
-	<font color="gold"><div style="font-size:50%"><i>Free From <b>Big Tech Control</b> ... </i></div></font><br>
+	<font color="gold"><div style="font-size:50%"><i>Free From <b>Big Tech</b> ... </i></div></font>
+	<font color="gold"><div style="font-size:50%"><i>Free From <b>Big Banks</b> ... </i></div></font><br>
 	<font color="gold"><div style="font-size:60%"><i>An <b>UNCENSORED</b> Platform, <b>YOU</b> Control!</i></div></font>
 	<!--/--><br>
 <br>
