Changed Pitrix status

--- a/status.html
+++ b/status.html
@@ -140,10 +140,10 @@
 			<td>Pitrix.viADDR#3:3:0033:53</td>
 		</tr>
 		<tr>
-			<td>&#128994</td>
+			<td>&#128308</td>
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
-			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
