Added Snapshot summary, Updated Hardware page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,17 @@
 	<font color="gold"><div align="right" style="font-size:50%"><strong>MORE</strong></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></div></font><br>
+	
+		<!-- general status summary of Harmonious Platform -->
+	<font color="gold"><div align="right" style="font-size:50%"><b><u>Snapshot (2022)</u></b></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
 
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Uptime (100%)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Security breaches (0)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="0" max="100"> 0% </progress></div></font>
+<!-- cont. -->
 
 			<!-- logo image is to be used as part of the title text \./ -->
 	<img src="https://i.imgur.com/PkMpBXR.png" alt="logo-image" width="80" height="80"><strong>armonious Platform Systems</strong>
