Index page update, updated Components and Progress pages with added info

--- a/components.html
+++ b/components.html
@@ -168,10 +168,33 @@
 
 <hr style="border: 1px solid gold;" />
 
+	<font color="gold"><div align="left" style="font-size:50%"><b>Pouch</b></div></font>
+
+	<font color="gold"><div align="left" style="font-size:50%">Pouch has been developed as a temporary platform to house the viADDR 
+	Database, its proxy module and the Pitrix viADDR Global Allocation table. Eventually these components will be migrated into 1V 
+	(in development) and at that point Pouch will be made redundant.</div></font>
+
+<hr style="border: 1px solid gold;" />
+
+	<font color="gold"><div align="left" style="font-size:50%"><b>1V</b></div></font>
+
+	<font color="gold"><div align="left" style="font-size:50%">1V is a file-based operating sub-system which is currently under heavy 
+	development. Once implemented, components currently utilizing Pouch will be migrated to 1V.</div></font>
+
+<hr style="border: 1px solid gold;" />
+
 	<font color="gold"><div align="left" style="font-size:50%"><b>Pitrix</b></div></font>
 
 	<font color="gold"><div align="left" style="font-size:50%">Component which provides global virtual office functions and session 
 	authentication.</div></font>
+
+<hr style="border: 1px solid gold;" />
+
+	<font color="gold"><div align="left" style="font-size:50%"><b>viADDR Database</b></div></font>
+
+	<font color="gold"><div align="left" style="font-size:50%">viADDR Database is built of two components - the main database module 
+	plus a proxy module - and written in its own programming language. viADDR is a database used for distribution of the Pitrix viADDR 
+	Global Allocation table.</div></font>
 
 <hr style="border: 1px solid gold;" />
 
