--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Message Board</b></div></font><br>
 <!-- br -->
 	<font color="gold"><div align="left" style="font-size:40%"><i>*Harmonious Platform is prototype and under active development
+	</i></div></font>
+	<font color="gold"><div align="left" style="font-size:40%"><i>Specification 3.0 is in development
 	</i></div></font><br>
 <!-- br -->
 	<font color="gold"><div align="left" style="font-size:50%">For detailed list of components, <a href="components.html">click 
