--- a/progress.html
+++ b/progress.html
@@ -126,8 +126,17 @@
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>LinkNet Status Monitor Tool</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="30" max="100"> 30% </progress></div></font>
 <br>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Pouch</b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>1V</b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="1" max="100"> 1% </progress></div></font>
+<br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Pitrix</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>viADDR Database</b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="25" max="100"> 25% </progress></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Harmonious Access Browser</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="50" max="100"> 50% </progress></div></font>
