Update to Components and Progress pages.

--- a/components.html
+++ b/components.html
@@ -111,9 +111,17 @@
 
 <hr style="border: 1px solid gold;" />
 
+	<font color="gold"><div align="left" style="font-size:50%"><b>Core</b></div></font>
+
+	<font color="gold"><div align="left" style="font-size:50%">A core component running Pouch which brings Harmonious Platform online.
+	</div></font>
+
+<hr style="border: 1px solid gold;" />
+
 	<font color="gold"><div align="left" style="font-size:50%"><b>Mainframe</b></div></font>
 
-	<font color="gold"><div align="left" style="font-size:50%">Core component which enables Harmonious Platform to function.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">A critical component running Apache which enables Harmonious Platform
+	to function. Also handles site version control. Works in tandem with the Core.</div></font>
 
 <hr style="border: 1px solid gold;" />
 
