--- a/progress.html
+++ b/progress.html
@@ -99,8 +99,11 @@
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Inter-Com Net</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="45" max="100"> 45% </progress></div></font>
 <br>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Core</b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
+<br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Mainframe</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="50" max="100"> 50% </progress></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="45" max="100"> 45% </progress></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>LinkNet</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="45" max="100"> 45% </progress></div></font>
