Updated Contact page. Now redirects to PR.

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
 	<!-- Site version 2.4.2 \./ -->
 
 <head>
+		<!-- Page redirection -->
+			<meta http-equiv="refresh" content="1; url=http://www.freedompublishersunion.net/pages/contact.html" />
+
 <title>Harmonious Platform Systems - Contact</title>
 
 <style>
@@ -94,19 +97,7 @@
 
 	<p><strong>Contact</strong></p>
 <br>
-	<font color="gold"><div style="font-size:50%"><b>Founder and Director</b></div></font>
-	<font color="gold"><div style="font-size:50%">Chris McGimpsey-Jones</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Email</b></div></font>
-	<font color="gold"><div style="font-size:50%">harmoniousplatformsystems@outlook.com.au</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Cell phone</b></div></font>
-	<font color="gold"><div style="font-size:50%">0402 650 018</div></font>
-<br>
-	<font color="gold"><div style="font-size:50%"><b>Business registration</b></div></font>
-	<font color="gold"><div style="font-size:50%">PO Box 171</div></font>
-	<font color="gold"><div style="font-size:50%">Labrador, Gold Coast</div></font>
-	<font color="gold"><div style="font-size:50%">Queensland (Australia)</div></font><br>
+	<font color="gold"><div style="font-size:50%">Page redirecting... </div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
