News+CMDC updates

--- a/about.html
+++ b/about.html
@@ -116,6 +116,13 @@
 	enables maximum level of scalability, effectively on-the-fly, without affecting overall performance of the platform or inducing 
 	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font><br>
 
+	<p><strong>Payments and Donations</strong></p>
+<br>
+	<font color="gold"><div align="center" style="font-size:50%">PayPal: <b><a href="https://www.paypal.me/mppmau">paypal.me/mppmau</a></b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Patreon: <b><a href="https://www.patreon.com/mppmau">patreon.com/mppmau</a></b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Bitcoin: <b>1G8LY7CKK8TDQ7EkmKef8BtSCtRivby4uF</b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Ethereum: <b>0xd13Bf3f6bf90824816526e4B0260Ec899F30B5A8</b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Litecoin: <b>ltc1qxs8dhejakl6rjdcckhlxf8trd8l8am0m5270zc</b></div></font><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
