--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>January 16, 2022</b><br>
+	<br>
+	L-CERT Standard Version 1.0 has been finalized and approved.</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>December 13, 2021</b><br>
 	<br>
 	Soul v1.0.1 has been released.
