--- a/cmdc.html
+++ b/cmdc.html
@@ -102,9 +102,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency with a specification which pegs it to a defined 
 	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was 1:1.25. 
 	For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
-	A new value rate is yet to be finalized, but at the moment it is looking like something between 1:0.15 to 1:0.25 as the most probable value 
-	rate. For example, 1 US dollar would equate to 0.15 or 0.25 CMDC, respectively. If the latter value rate is to be the final determined rate, then 
-	it would be 4 US dollars for 1 CMDC.</div></font><br>
+	A new value rate is yet to be finalized, but at the moment it is looking like 1:0.000000015 as the most probable value rate.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being resource intensive. Some analysts believe that its high 
 	rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for mining and storage to 
@@ -124,7 +122,7 @@
 	transactions using CMDC. Transaction tools and a ledger are currently being developed. More news about its progress will be posted when available. 
 	December 19, 2021 - A milestone was reached when the first 10 billion CMDC was refined and dropped into the social distribution vault.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 100,000,000,000</div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 160,000,000,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: 0</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Value rate: Not yet determined.</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Total value: Not yet determined.</strong></div></font><br>
