--- a/cmdc.html
+++ b/cmdc.html
@@ -96,22 +96,22 @@
 <br>
 	<img src="images/cmdc-icon-128px.png" alt="cmdc-logo" width="64" height="64">
 
-	<font color="gold"><div align="left" style="font-size:50%"><b>CMDC is an acronym for <u>Centrally Managed Digital Currency</u> and can be stylized as 
-	$CMDC.</b></div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">CMDC is an acronym for <u>Centrally Managed Digital Currency</u> and can be stylized as 
+	$CMDC.</div></font><br>
 	
 	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency with a specification which pegs it to a defined 
-	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was 1:1.25. 
-	For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
+	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to be 
+	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
 	A new value rate is yet to be finalized, but at the moment it is looking like 1:0.000000015 as the most probable value rate.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being resource intensive. Some analysts believe that its high 
-	rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for mining and storage to 
-	increase energy efficiency. During the mining process it will push all cores of the central processing unit to maximum but memory usage remains 
-	moderate. While there is no technical limitation to the total number of CMDC blocks that can be put into circulation, there are still restrictions 
-	of the amount of available blocks in holding in the social distribution vault.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
+	analysts believe that its high rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for 
+	mining and storage to increase energy efficiency. During the mining process it will push all cores of the central processing unit to maximum but memory 
+	usage remains moderate. While there is no technical limitation to the total number of CMDC blocks that can be put into circulation, there are still 
+	restrictions of the amount of available blocks in holding in the social distribution vault.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">CMDC is mined using a parallel processing and file duplication combination. Mined 
-	blocks are created from a raw block called "block0". To prevent fraudulent duplication of blocks, each individual block is dated and 
+	blocks are created from a raw block, called "block0". To prevent fraudulent duplication of blocks, each individual block is dated and 
 	timestamped which cannot be altered through traditional file duplication methods of the operating system. Once the mining process is complete, 
 	mined blocks are then refined. Without being refined, the blocks are worthless. During the refining process the blocks are compressed, encrypted 
 	and digitally signed with a unique and secret key which is not made public. It is this secret key which is used to identify authenticity of 
@@ -122,7 +122,7 @@
 	transactions using CMDC. Transaction tools and a ledger are currently being developed. More news about its progress will be posted when available. 
 	December 19, 2021 - A milestone was reached when the first 10 billion CMDC was refined and dropped into the social distribution vault.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 160,000,000,000</div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 310,000,000,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: 0</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Value rate: Not yet determined.</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Total value: Not yet determined.</strong></div></font><br>
