--- a/cmdc.html
+++ b/cmdc.html
@@ -124,7 +124,7 @@
 
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 310,000,000,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: 0</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Value rate: Not yet determined.</div></font>
+	<font color="gold"><div align="left" style="font-size:60%">Value rate: Proposal under consideration.</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Total value: Not yet determined.</strong></div></font><br>
 
 <br>
