Updated CMDC figures

--- a/cmdc.html
+++ b/cmdc.html
@@ -102,7 +102,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency with a specification which pegs it to a defined 
 	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to be 
 	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
-	A new value rate is yet to be finalized, but at the moment it is looking like 1:0.000000015 as the most probable value rate.</div></font><br>
+	A new value rate is 1:2500.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
 	analysts believe that its high rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for 
@@ -122,10 +122,10 @@
 	transactions using CMDC. Transaction tools and a ledger are currently being developed. More news about its progress will be posted when available. 
 	December 19, 2021 - A milestone was reached when the first 10 billion CMDC was refined and dropped into the social distribution vault.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: 310,000,000,000</div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 360,000,000,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: 0</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Value rate: Proposal under consideration.</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Total value: Not yet determined.</strong></div></font><br>
+	<font color="gold"><div align="left" style="font-size:60%">Value rate: 1:2500</div></font>
+	<font color="gold"><div align="left" style="font-size:60%">Total value: $US 132,000,000 </strong></div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
