Added bio, press, press content pages. Revised About page.

--- a/about.html
+++ b/about.html
@@ -114,7 +114,70 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform is developed using modular components which 
 	enables maximum level of scalability, effectively on-the-fly, without affecting overall performance of the platform or inducing 
-	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font><br>
+	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><i>Are we really a startup?</i></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><i>Yes, absolutely!</i></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">We preach high quality and set high expectations for ourselves in what we 
+	deliver.</div></font>
+	<br>	
+	<font color="gold"><div align="left" style="font-size:50%">We are never going to claim to be something that we are not. We do not have a 
+	suite of corporate offices available to us, we do not have a call center located in a third-world country operated by a highly underpaid 
+	workforce and we do not have a team of lawyers ready to defend us. Primarily, we are run from an apartment complex on the Gold Coast in 
+	Australia by our founder, 
+	<a href="chris-mcgimpsey-jones.html" style="color:gold; text-decoration:none";><u>Chris McGimpsey-Jones</u></a>, along with a small group 
+	of dedicated volunteers in various locations around the world whom make contributions.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">We are dedicated and committed to embracing the hacker sub-culture to get stuff 
+	done, with what software and hardware we have at our disposal.</div></font>
+<br>
+		<figure>
+			<img src="images/chris-bio.jpg" height="200">
+			<figcaption><font color="gold"><div style="font-size:50%">Chris McGimpsey-Jones</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Founder)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/core.jpg" width="200">
+			<figcaption><font color="gold"><div style="font-size:50%">Core</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/mainframe.jpg" width="200">
+			<figcaption><font color="gold"><div style="font-size:50%">Mainframe</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-sysadmin.jpg" width="200">
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC System Administration</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Fedora 35 Workstation)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-mining.jpg" height="200">
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC Mining Servers</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Ubuntu Server 21.10)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-gobblechain.jpg" width="200">
+			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">(Ubuntu Server 21.10)</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/office.jpg" width="200">
+			<figcaption><font color="gold"><div style="font-size:50%">Office</div></font></figcaption>
+		</figure>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">Most of our infrastructure is built from a combination of laptops and recycled 
+	desktop computers, some running as servers. We operate an internal intranet with multiple domains which interconnects seamlessly with the internet, 
+	allowing public access. Some publicly accessible components of the Harmonious Platform are hosted using traditional server methods. Our hybrid 
+	network allows for seamless performance and has created an extremely stable and rodubst platform. Generally, most people would be very surprised 
+	about what we have been able to achieve on the bare minimum of hardware that we operate.</div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%">Operating and administering our own hardware can be resource intensive and still 
+	costs a lot of money. Is there bugs? Do things fail? Do things break? Of course they do! But remaining in control of the core operations of our 
+	own platform is important to us and we have the expertise to be able to deal with all of these problems when they arise. We are proud of all 
+	that we have achieved and have already far exceeded all expectations that we had of how far and how hard we could push the Harmonious Platform. 
+	And we're not finished yet!</div></font><br>
 
 	<p><strong>Payments and Donations</strong></p>
 <br>
