Fixed bug in Press page.

--- a/press.html
+++ b/press.html
@@ -96,7 +96,7 @@
 <br>
 	<font color="gold"><div style="font-size:70%">
 	<ul>
-		<li>July 8, 2020 - Interview with Mislav Jurić. You can read the interview <a href="press-mislavjuric-interview.html"><b>here</b></a></li>
+		<li>July 8, 2020 - Interview with Mislav Juric. You can read the interview <a href="press-mislavjuric-interview.html"><b>here</b></a></li>
 		<li>October 31, 2016 - Interview with OSTechNix. You can read the interview <a href="press-ostechnix-interview.html"><b>here</b></a></li>
 	</ul>
 	</div></font>
