Another press content fix.

--- a/press-mislavjuric-interview.html
+++ b/press-mislavjuric-interview.html
@@ -92,7 +92,7 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
-	<p><strong>Interview with Mislav Jurić - July 8, 2020</strong></p>
+	<p><strong>Interview with Mislav Juric - July 8, 2020</strong></p>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Introduce yourself.</b></div></font>
 <br>
