Fixed minor bugs.

--- a/press-mislavjuric-interview.html
+++ b/press-mislavjuric-interview.html
@@ -100,7 +100,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">I am a Linux technologist and writer, and I work out of my office here on the 
 	Gold Coast in Australia.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">Many will know me as the co-founder of Freedom Publishers Union but I'm actually 
-	involved in many different projects and I write about a lot of different stuff – Linux, free and open source software, freedom of 
+	involved in many different projects and I write about a lot of different stuff - Linux, free and open source software, freedom of 
 	information, digital rights, privacy and even politics.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">And I'm also a public advocate for Creative Commons and the Tor Project.</div></font>
 <br>
@@ -137,7 +137,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">But anyway, some of the staff joined me in a new project I was working on, which would soon 
 	become Freedom Publishers Union.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">Some of the staff assisted me where they could, but a few new projects also spawned.</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">Now, there's two websites – OSTechNix and OSRadar – they are operated independently of each 
+	<font color="gold"><div align="left" style="font-size:50%">Now, there's two websites - OSTechNix and OSRadar - they are operated independently of each 
 	other, as his Freedom Publishers Union.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">But OSTechNix is actually a co-owner of Freedom Publishers Union.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">So, despite the independent nature of business of all these operations, we all still co-operate 
@@ -377,7 +377,7 @@
 	<font color="gold"><div align="left" style="font-size:50%"><b>Can penetration testers (hackers) benefit from learning Linux?</b></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Oh absolutely.</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">You know, the term “hacker” is referenced in some strange ways.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">You know, the term "hacker" is referenced in some strange ways.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">There is still just way too many people that believe inaccurately that anyone who calls 
 	themselves a hacker is up to no good or involved in something illegal.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">When I think of a hacker, I think of the mid to late 70s and into the 80s when hacking 
